# amlc-2021

./: .replit  README.md  offshore.py  postBuild  pyproject.toml  requirements.txt  start
binder/: gurobi.lic  requirements.txt  start
offshore/: offshore.py  offshore.xlsx
transportation/: simple.py
workforce/: workforce_scheduling.py
