[tool.poetry]
name = "repl_python3_beta_amlc-1"
version = "0.1.0"
description = ""
authors = ["oberdieck <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.5"
gurobipy = "^9.1.2"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
